...
//

import UIKit

open class ChatViewController: UIViewController {
    static public let CellIdentifier = "ChatCellIdentifier"
    public var navigationTitle = "Messages"
    public var dataSource: UITableViewDataSource? { didSet {
        if let _ = self.viewIfLoaded, let tableView = self.tableView {
            tableView.dataSource = self.dataSource } } }
    public var delegate: UITableViewDelegate? { didSet {
        if let _ = self.viewIfLoaded, let tableView = self.tableView {
            tableView.delegate = self.delegate } } }
...
