...
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sg5-nU-STP">
                            <rect key="frame" x="321" y="6" width="46" height="30"/>
                            <constraints>
                                <constraint firstAttribute="width" constant="46" id="Or8-uf-IzL"/>
                                <constraint firstAttribute="height" constant="30" id="vry-cD-LoT"/>
                            </constraints>
                            <state key="normal" title="Send"/>
                            <variation key="default">
                                <mask key="constraints">
                                    <exclude reference="Or8-uf-IzL"/>
                                    <exclude reference="vry-cD-LoT"/>
                                </mask>
                            </variation>
...
